--- a/.github/chainguard/update-readme.sts.yaml
+++ b/.github/chainguard/update-readme.sts.yaml
@@ -1,7 +1,7 @@
 issuer: https://token.actions.githubusercontent.com
 subject: repo:test-organization-fabz/test-octo-sts:ref:refs/heads/main
-claim_pattern:
-  job_workflow_ref: test-organization-fabz/test-octo-sts/.github/workflows/update-readme.yml
+# claim_pattern:
+#   job_workflow_ref: test-organization-fabz/test-octo-sts/.github/workflows/update-readme.yml
 
 permissions:
   contents: write
